@@ -1,3 +1,7 @@
+2010-12-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* liststore.py, plugins/base.py: Added ban (black list) functions.
+
 2010-12-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* idlecheck.py: Fixed dbus errors.
